--- a/public/index.html
+++ b/public/index.html
@@ -70,7 +70,9 @@
 
                             <span className="rank">{ninja.rank}</span>
 
-                            <span className="dist">{Math.floor(ninja.dis)} km</span>
+                            <span className="dist">{Math.floor(ninja.dist.calculated/1000)} km</span>
+
+
 
                         </li>
 
